--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   },
   "author": "",
   "license": "ISC",
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "jest": "^26.6.3"
+  }
 }
